--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link href="css/scratchx.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="libs/swfobject.js"></script>
     <script type="text/javascript" src="libs/jquery.min.js"></script>
+    <script type="text/javascript" src="scratch_extensions/scratch_ext.js"></script>
     <script type="text/javascript">
+        // Simulate the bare minimum of the view that exists on the main site
+        var Scratch = Scratch || {};
+        Scratch.FlashApp = Scratch.FlashApp || {};
+
         function handleEmbedStatus(e) {
             $('#scratch-loader').hide();
             var scratch = $('#scratch');
@@ -18,6 +23,7 @@
                 scratch.find('DIV.scratch_loading').hide();
             } else {
                 scratch.css('visibility', 'visible');
+                Scratch.FlashApp.ASobj = scratch[0];
             }
         }
 
