Load a project if specified on the URL

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
             }
         }
 
+        function JSprojectLoaded() {
+            loadExtensionQueue();
+        }
+
         var extensionQueue = [];
         function handleParameters() {
             var project;
@@ -60,8 +64,12 @@
                         break;
                 }
             }
-            // TODO: load project if specified
-            loadExtensionQueue();
+            if (project) {
+                Scratch.FlashApp.ASobj.ASloadSBXFromURL(project);
+            }
+            else {
+                loadExtensionQueue();
+            }
         }
 
         function loadExtensionQueue() {
