--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="css/base.css" rel="stylesheet" type="text/css">
     <link href="css/scratchx.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="libs/swfobject.js"></script>
-    <script type="text/javascript" src="libs/jquery.min.js"></script>
+    <script type="text/javascript" src="libs/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="scratch_extensions/scratch_ext.js"></script>
     <script type="text/javascript">
         // Simulate the bare minimum of the view that exists on the main site
