Add a privacy policy page with styles

--- a/index.html
+++ b/index.html
@@ -99,6 +99,64 @@
             </div>
         </section>
     </article>
+    <article id="privacy-policy">
+        <section>
+            <div>
+                <aside class="warning"><strong>Warning:</strong> These extensions are experimental. Please read the FAQ before trying them.</aside>
+                <div>
+                    <section class="main">
+                        <h1>Privacy Policy</h1>
+                        <p id="privacy-introduction">Scratch Day is a global network of events that celebrates <a href="https://scratch.mit.edu/">Scratch</a> — and the young people who code and create with it. During Scratch Day, young people and adults gather to share projects and learn from one another.</p>
+
+                        <p>We have built this website to help event organizers and attendees connect. To make this happen, we collect some information from our users. We wrote this privacy policy to explain what information we collect, how we use it, and what we’re doing to keep it safe. If you have any questions regarding this policy, you can <a href="">contact us</a>.</p>
+                        
+                        <h2 id="privacy-information-we-collect">Information we collect</h2>
+                        <p><strong>Account Information:</strong> In order to register an event, hosts must register with the Scratch Day website. You need to be at least 18 years old to sign up as a host on this site, because your contact name and email address will be posted online. During account creation, we ask you for your full name, your email address, and your Scratch username (not required). Site visitors will be able to see your name, your email, and your Scratch username once you have published an event.</p>
+                        <p><strong>Event Information:</strong> When registering an event, hosts will be asked for additional information about their event, including a specific address. Once the event is published, this address and all descriptive information provided will be public on the event listing to anyone browsing the website.</p>
+                        <p><strong>User-Generated Content:</strong> All of the host and event information is stored on our servers. Because we are responsible for maintaining and updating this site, we have access to all content stored on the Scratch Day website, including unpublished events.</p>
+                        <p><strong>Usage Information:</strong> When you use Scratch, our servers will automatically store a limited amount of information about how you use the website. This information includes a number that identifies your computer (the IP address), which pages you visited and when, number of bytes transferred, time that takes for our server to respond to your computer’s requests, and what browser / operating system you are using.</p>
+                        <p><strong>Google Analytics:</strong> We also collect some data on where you click and which parts of the site you visit using Google Analytics. This "click data" helps us figure out ways to improve the website. Information collected and processed by Google Analytics includes the user's IP address, network location, and geographic location. Google Analytics acquires all of its information directly from the user, by installing a cookie (see below) on your computer, if you have enabled JavaScript. We do not share any information that we collect with Google, and Google does not collect any personal identifying information about you.</p>
+                        <p><strong>Cookies:</strong> When you log in as a host, the Scratch Day website asks your browser to put an http "cookie" on your computer. The cookie is actually a small text file that our site can send to your browser for storage on your computer. This allows the website to remember that you are logged in when you go to a different page.</p>
+
+                        <h2 id="privacy-use-your-information">How do we use your information?</h2>
+                        <ul>
+                            <li>We collect browsing data so that we know who is using the website.</li>
+                            <li>If you forget your password, we will use your email address to send you a new password.</li>
+                            <li>We will use your email address to respond to messages you send us or to communicate with you about your event or your account.</li>
+                            <li>We may disclose certain information we collect to third-party service providers that help us manage communications to and from the website and improve website performance. We are satisfied that these service providers have privacy policies that restrict them from further disclosing any of your information.</li>
+                            <li>Other than as described above, we will never share personally identifiable information about you with any other person, company, or organization, except:
+                                <ul>
+                                  <li>As required to comply with our obligations under the law.</li>
+                                  <li>For technical reasons, if we are required to transfer the data on our servers to another location or organization.</li>
+                                </ul>
+                            </li>
+                        </ul>
+
+                        <h2 id="privacy-update-your-information">How can you update your personal information?</h2>
+                        <p>You can update your personal and event information through the My Events panel. You can also reset your password by choosing the ‘Forgot your password?’ link on the Login modal.</p>
+                        <p>If you want to delete your account entirely, please contact us directly.</p>
+
+                        <h2 id="privacy-protect-your-information">How do we protect your information?</h2>
+                        <p>We have in place physical and electronic procedures to protect the information we collect on the Scratch Day website. We strictly limit individual access to our servers and the data we store on them. However, as effective as these measures are, no security system is impenetrable. We cannot completely guarantee the security of our database, nor can we guarantee that the information you supply will not be intercepted while being transmitted to us over the Internet.</p>
+
+                        <h2 id="privacy-notifications-of-changes">Notifications of Changes to the Privacy Policy</h2>
+                        <p>We review our security measures and Privacy Policy on a periodic basis, and we may modify our policies as appropriate. We may also change or update our Privacy Policy if we add new services or features. If we make any changes to our privacy practices, we will amend this Privacy Policy accordingly and post the amended policy on the Scratch Day website. We encourage you to review our Privacy Policy on a regular basis.</p>
+                    </section>
+                    <nav>
+                        <h3>Contents</h3>
+                        <ol>
+                            <li><a href="#privacy-introduction">Introduction</a></li>
+                            <li><a href="#privacy-information-we-collect">Information we collect</a></li>
+                            <li><a href="#privacy-use-your-information">How do we use your information?</a></li>
+                            <li><a href="#privacy-update-your-information">How can you update your personal information?</a></li>
+                            <li><a href="#privacy-protect-your-information">How do we protect your information?</a></li>
+                            <li><a href="#privacy-notifications-of-changes">Notifications of Changes to the Privacy Policy</a></li>
+                        </ol>
+                    </nav>
+                </div>
+            </div>
+        </section>
+    </article>
     <footer>
         <div>
             <section>
