Style social media icons

--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
                 <p>Extensions on ScratchX are experimental and are not reviewed by the Scratch Team or the MIT Media Lab.</p>
                 <p><a href="https://scratch.mit.edu/">Scratch</a> is a project of the Lifelong Kindergarten Group at the MIT Media Lab.</p>
                 <p>
-                    <a class="twitter" title="Follow us on Twitter" href="https://twitter.com/scratch/" target="_blank">@scratch on Twitter</a>
-                    <a class="github" title="Fork us on GitHub" href="https://twitter.com/scratch/" target="_blank">LLK on GitHub</a>
+                    <a class="twitter" title="Follow us on Twitter" href="https://twitter.com/scratch/" target="_blank"><span>@scratch on Twitter</span></a>
+                    <a class="github" title="Fork us on GitHub" href="https://twitter.com/scratch/" target="_blank"><span>LLK on GitHub</span></a>
                 </p>
             </section>
 
