Add static page navigation

--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
             </section>
 
             <nav>
-                <h2>ScratchX</h2>
+                <h2><a href="#home" data-staticlink="home">ScratchX</a></h2>
                 <ul>
                     <li><a href="">Terms of Service</a></li>
-                    <li><a href="">Privacy Policy</a></li>
+                    <li><a href="#privacy-policy" data-staticlink="privacy-policy">Privacy Policy</a></li>
                     <li><a href="">Contact Us</a></li>
                     <li><a href="">FAQ</a></li>
                     <li><a href="">Forums</a></li>
