Make logo go to home, fix click handler

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <main>
     <header>
         <div>
-            <h1 class="scratchx-logo"><span>ScratchX</span></h1>
+            <a href="#home" data-staticlink="home"><h1 class="scratchx-logo"><span>ScratchX</span></h1></a>
             <nav class="main-nav">
             Related Sites:
             <ul>
