Add handlers for file and url inputs

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <p><a href="">What is a .sbx file?</a></p>
                         </section>
                         <section>
-                            <button>Browse for local file</button>
+                            <button data-action="load-file">Browse for local file</button>
                         </section>
                     </dialog>
 
@@ -52,7 +52,7 @@
                             <p><a href="">What is a ScratchX URL?</a></p>
                         </section>
                         <section>
-                            <div class="input-plus-button">
+                            <div class="input-plus-button" data-action="load-url">
                                 <input type="text" placeholder="paste url..." />
                                 <button>Open</button>
                             </div>
