--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <section>
             <div>
                 <h2>Developer Documentation</h2>
-                <p>Developers can create new Experimental Extensions using Javascript. To learn more, read the <a href="">Developer Documentation</a>.</p>
+                <p>Developers can create new Experimental Extensions using Javascript. To learn more, read the <a href="http://llk.github.io/scratch-extension-docs/">Developer Documentation</a>.</p>
             </div>
         </section>
     </article>
@@ -164,7 +164,7 @@
                 <p><a href="https://scratch.mit.edu/">Scratch</a> is a project of the Lifelong Kindergarten Group at the MIT Media Lab.</p>
                 <p>
                     <a class="twitter" title="Follow us on Twitter" href="https://twitter.com/scratch/" target="_blank"><span>@scratch on Twitter</span></a>
-                    <a class="github" title="Fork us on GitHub" href="https://twitter.com/scratch/" target="_blank"><span>LLK on GitHub</span></a>
+                    <a class="github" title="Fork us on GitHub" href="https://github.com/LLK/" target="_blank"><span>LLK on GitHub</span></a>
                 </p>
             </section>
 
@@ -182,12 +182,12 @@
             <nav>
                 <h2>Scratch Family</h2>
                 <ul>
-                    <li><a href="">Scratch</a></li>
-                    <li><a href="">ScratchEd</a></li>
-                    <li><a href="">ScratchJr</a></li>
-                    <li><a href="">Scratch Conference</a></li>
-                    <li><a href="">Scratch Day</a></li>
-                    <li><a href="">Code-to-Learn Foundation</a></li>
+                    <li><a href="https://scratch.mit.edu/">Scratch</a></li>
+                    <li><a href="http://scratched.gse.harvard.edu/">ScratchEd</a></li>
+                    <li><a href="http://www.scratchjr.org/">ScratchJr</a></li>
+                    <li><a href="https://scratch.mit.edu/conference/">Scratch Conference</a></li>
+                    <li><a href="http://day.scratch.mit.edu/">Scratch Day</a></li>
+                    <li><a href="http://codetolearn.org/">Code-to-Learn Foundation</a></li>
                 </ul>
             </nav>
         </div>
