Remove link from nav heading

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </section>
 
             <nav>
-                <h2><a href="#home" data-staticlink="home">ScratchX</a></h2>
+                <h2>ScratchX</h2>
                 <ul>
                     <li><a href="">Terms of Service</a></li>
                     <li><a href="#privacy-policy" data-staticlink="privacy-policy">Privacy Policy</a></li>
