Use a form for URLs so you can hit enter to submit

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                             <p><a href="">What is a ScratchX URL?</a></p>
                         </section>
                         <section>
-                            <div class="input-plus-button" data-action="load-url">
+                            <form class="input-plus-button" data-action="load-url">
                                 <input type="text" placeholder="paste url..." />
-                                <button>Open</button>
-                            </div>
+                                <button type="submit">Open</button>
+                            </form>
                         </section>
                     </dialog>
 
