Allow loading URLs from links

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <p><a href="">What is a ScratchX URL?</a></p>
                         </section>
                         <section>
-                            <form class="input-plus-button" data-action="load-url">
+                            <form class="input-plus-button url-load-form">
                                 <input type="text" placeholder="paste url..." />
                                 <button type="submit">Open</button>
                             </form>
@@ -66,15 +66,15 @@
                         </section>
                         <section>
                             <ul>
-                                <li><a href="">
+                                <li><a href="?url=./scratch_extensions/picoExtension.js" data-action="load-url">
                                     <h3>Extension 1</h3>
                                     <p>Extension 1 description</p>
                                 </a></li>
-                                <li><a href="">
+                                <li><a href="?url=./scratch_extensions/picoExtension.js"  data-action="load-url">
                                     <h3>Extension 2</h3>
                                     <p>Extension 2 description</p>
                                 </a></li>
-                                <li><a href="">
+                                <li><a href="?url=./scratch_extensions/picoExtension.js"  data-action="load-url">
                                     <h3>Extension 3</h3>
                                     <p>Extension 3 description</p>
                                 </a></li>
