Unredundantize static link method

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <main>
     <header>
         <div>
-            <a href="#home" data-staticlink="home"><h1 class="scratchx-logo"><span>ScratchX</span></h1></a>
+            <a href="#home" data-action="static-link"><h1 class="scratchx-logo"><span>ScratchX</span></h1></a>
             <nav class="main-nav">
             Related Sites:
             <ul>
@@ -172,7 +172,7 @@
                 <h2>ScratchX</h2>
                 <ul>
                     <li><a href="">Terms of Service</a></li>
-                    <li><a href="#privacy-policy" data-staticlink="privacy-policy">Privacy Policy</a></li>
+                    <li><a href="#privacy-policy" data-action="static-link">Privacy Policy</a></li>
                     <li><a href="">Contact Us</a></li>
                     <li><a href="">FAQ</a></li>
                     <li><a href="">Forums</a></li>
