Update footer links

--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
             <nav>
                 <h2>ScratchX</h2>
                 <ul>
-                    <li><a href="">Terms of Service</a></li>
+                    <li><a href="https://scratch.mit.edu/terms_of_use/">Terms of Service</a></li>
                     <li><a href="#privacy-policy" data-action="static-link">Privacy Policy</a></li>
-                    <li><a href="">Contact Us</a></li>
+                    <li><a href="mailto:scratch-extensions@media.mit.edu">Contact Us</a></li>
                     <li><a href="">FAQ</a></li>
-                    <li><a href="">Forums</a></li>
+                    <li><a href="https://scratch.mit.edu/discuss/41/">Forums</a></li>
                 </ul>
             </nav>
 
